# ProductiveMiner

./: .env.besu  .env.public  .gitignore  API_ARCHITECTURE.md  AWS_DEPLOYMENT_STEPS.md  CLEANUP_SUMMARY.md  CLOUD_DEPLOYMENT_GUIDE.md  COMPLETE_RAILWAY_DEPLOYMENT.md  DEPLOYMENT_SUMMARY.md  Dockerfile  Dockerfile.adaptive  Dockerfile.frontend  Dockerfile.frontend.simple  Dockerfile.railway  FRONTEND_RAILWAY_DEPLOYMENT.md  GENESIS_BLOCK_FIX.md  GENESIS_BLOCK_IMPLEMENTATION.md  GRADUAL_BIT_STRENGTH_SUMMARY.md  HARDHAT_COMPARISON.md  HARDHAT_TROUBLESHOOTING.md  METAMASK_INTEGRATION_SUMMARY.md  METAMASK_MINED_TOKEN_SETUP.md  METAMASK_QUICK_START.md  MINED_TOKEN_GUIDE.md  QUICK_START_CLOUD_DEPLOYMENT.md  RAILWAY_DEPLOYMENT.md  README.md  RESEARCH_REPOSITORY_GUIDE.md  RESEARCH_REPOSITORY_UPDATE.md  REWARD_PERSISTENCE_FIX.md  SEPOLIA_DEPLOYMENT_GUIDE.md  SOLIDARITY_DEPLOYMENT_GUIDE.md  STAKING_WALLET_FIX.md  SYSTEM_STATUS.md  TESTNET_DEPLOYMENT_SUCCESS.md  TESTNET_STATUS.md  attack-simulation-framework.js  attack-simulator.js  cleanup-old-versions.sh  cryptographic-analysis-framework.js  (+32 more)
aws/: ELASTIC_IP_GUIDE.md  VIEW_DOCKER_IMAGES_GUIDE.md  assign-elastic-ip.sh  cleanup-old-deployments.sh  deploy-custom.sh  deploy-minimal.sh  deploy-separate-frontend.sh  deploy-simple.sh  deploy-to-aws.sh  deploy-with-elastic-ip.sh  ecr-access.sh  ecr-credentials.sh  fix-frontend-routing.sh  infrastructure-simple.yaml  infrastructure.yaml  manage-elastic-ip.sh  simple-frontend-fix.sh  simple-frontend-update.sh  update-ecs-frontend.sh  update-frontend-deployment.sh  view-docker-images.sh
backend/: mathematical-engines.js
config/: adaptive-genesis.json  besu-genesis.json  genesis.json  metamask-network.json  polkadot-genesis.json  polkadot-node-config.toml  redis.conf  testnet-chain-spec.json  testnet-faucet.json  testnet-genesis.json
contracts/: MINEDToken.sol  ProductiveMiner.sol  ProductiveMinerAdaptive.sol  ProductiveMinerPallet.rs  ProductiveMinerSolidarity.sol
docs/: TESTNET_GUIDE.md
drizzle/: schema.ts
frontend/: Dockerfile  README.md  nginx.conf  package-lock.json  package.json  railway.json
hybrid-node/: Cargo.toml  Dockerfile  Dockerfile.build
hybrid-node/pallets/productive-miner/: Cargo.toml
hybrid-node/pallets/productive-miner/src/: lib.rs
hybrid-node/runtime/: Cargo.toml
hybrid-node/runtime/src/: lib.rs
nginx/: .htpasswd  adaptive.conf  nginx.conf  public.conf
prisma/: schema.prisma
public/: index.html
scripts/: add-validators.js  (+24 more)
(+83 files in other folders)
